# dataset-scout

./: .commit_msg  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.clarity-protocol/: config.json  summary.md
.clarity-protocol/failures/: brainstorm-pool.md  failures.md  management.md
.clarity-protocol/goal/: open-questions.md  problem.md  requirements.md  stakeholders.md
.clarity-protocol/solution/: solution.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
docs/: architecture.md  cli.md  concepts.md  configuration.md  demo.md  example-report.html  getting-started.md  judged-corpus-shape.md
src/dataset_scout/: __init__.py  arxiv_search.py  cache.py  cli.py  context.py  core.py  coverage.py  curate.py  decompose.py  decomposition_io.py  dedup.py  embedder.py  embedding_fit.py  errors.py  eval_.py  events.py  filter_dsl.py  inspect_.py  intent.py  judge.py  keyword_expansion.py  licenses.py  llm_client.py  paper_search.py  pipeline.py  recipe.py  recipe_compose.py  recipe_draft.py  shortlist.py  stats.py  strategy.py  tour.py
src/dataset_scout/probes/: __init__.py  base.py  cheap.py
src/dataset_scout/render/: __init__.py  _view.py  html_report.py  inspect_panel.py  json_writer.py  judge_panel.py  markdown_report.py
src/dataset_scout/sources/: __init__.py  base.py  factory.py  huggingface.py  kaggle.py
tests/_fakes/: fake_source.py  recon_fixture.py
tests/recorded/: conftest.py  test_cassette_freshness.py  test_fixture_helper.py
tests/unit/: test_arxiv_search.py  test_brief_smell.py  test_cache.py  test_cli.py  test_context.py  test_core_types.py  test_coverage.py  test_curate.py  test_decompose.py  test_decomposition_io.py  test_dedup.py  test_dotenv.py  test_embedder.py  test_embedding_fit.py  test_eval.py  test_fake_source.py  test_filter_dsl.py  test_html_report.py  test_huggingface_source.py  test_inspect.py  test_intent.py  test_judge.py  test_kaggle_source.py  test_keyword_expansion.py  test_llm_client.py  test_metadata.py  test_paper_search.py  test_probes_cheap.py  test_recipe_compose.py  test_recipe_draft.py  test_recon_pipeline.py  test_report_redesign.py  test_review_flow.py  test_shortlist.py  test_stats.py  test_strategy.py  test_tour.py
tests/unit/fixtures/: assessor_prompt.txt  assessor_prompt_with_rows.txt  decompose_prompt.txt  judge_prompt.txt
