[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "dataset-scout"
version = "0.0.1"
description = "Reconnaissance, reframing, and curation of public datasets for AI detection engineers."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "dataset-scout contributors" }]
keywords = ["datasets", "ai-security", "detection", "curation", "huggingface"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Security",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# M0 base deps: deliberately minimal. Heavy deps land per-milestone.
dependencies = [
  "pydantic>=2.7",
  "typer>=0.12",
  "rich>=13.7",
  "structlog>=24.1",
  "pyyaml>=6.0",
  "tomli>=2.0; python_version<'3.11'",
  "huggingface-hub>=1.13.0",
  "httpx>=0.28.1",
  "python-dotenv>=1.2.2",
  "litellm>=1.83.14",
  "azure-identity>=1.25.3",
]

[project.optional-dependencies]
# Optional language-id extra (deferred filling in v1.5; declared now so users
# can `pip install dataset-scout[langid]` once the probe lands).
langid = ["fasttext>=0.9.2"]

# Dev / test tooling.
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.5",
  "mypy>=1.10",
  "respx>=0.21",
]

[project.scripts]
dataset-scout = "dataset_scout.cli:app"
dscout = "dataset_scout.cli:app"

# Source plugins are registered via this entry-point group (M1+ will populate).
[project.entry-points."dataset_scout.sources"]
huggingface = "dataset_scout.sources.huggingface:HuggingFaceSource"
# kaggle      = "dataset_scout.sources.kaggle:KaggleSource"
# pwc         = "dataset_scout.sources.pwc:PapersWithCodeSource"

[project.urls]
Homepage = "https://github.com/mdressman/dataset-scout"
Documentation = "https://github.com/mdressman/dataset-scout/blob/main/plan.md"
Issues = "https://github.com/mdressman/dataset-scout/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/dataset_scout"]

[tool.hatch.build.targets.sdist]
include = ["src/dataset_scout", "README.md", "LICENSE"]

[tool.uv]
dev-dependencies = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.5",
  "mypy>=1.10",
  "respx>=0.21",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/dataset_scout"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
strict = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
markers = [
  "unit: pure unit tests, no network, gates every PR",
  "recorded: tests against recorded HTTP snapshots (respx); gates every PR",
  "live: tests against live external APIs; nightly only",
  "perf: performance/budget tests",
]

[tool.coverage.run]
source = ["dataset_scout"]
branch = true
